--- a/pages/home/home.wxml
+++ b/pages/home/home.wxml
@@ -1,4 +1,12 @@
 <!--pages/home/home.wxml-->
 <text class="title">hello world</text>
 <button size="mini">点击按钮</button>
-<image src=""></image>
+
+<!-- 2. 获取用户信息的方式 -->
+<button open-type="getUserInfo" bindgetuserinfo="handleGetUserInfo">获取授权</button>
+<!-- 3. 展示用户信息的方式 -->
+<open-data type="userNickName"></open-data>
+<open-data type="userAvatarUrl"></open-data>
+
+<view bindtap="handleViewClick">{{name}}</view>
+<view wx:for="{{list}}">{{item.title}}</view>
